--- a/src/main/resources/templates/board/BoardInsert.html
+++ b/src/main/resources/templates/board/BoardInsert.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>footballAdmin</title>
-    <link rel="stylesheet" th:href="@{/css/board/adminBoardInsert.css}">
+    <link rel="stylesheet" th:href="@{/css/board/BoardInsert.css}">
 </head>
 
 <body>
@@ -15,8 +15,9 @@
             <h1>게시글작성</h1>
             <div class="right-con">
                 <div class="boardInsert">
-                    <span>게시글추가</span>
-                    <form th:action="@{/board/boardInsert}" method="post" th:object="${boardDto}" enctype="multipart/form-data">
+                    <h2>게시글추가</h2>
+                    <form th:action="@{/board/boardInsert}" method="post"
+                          th:object="${boardDto}" enctype="multipart/form-data">
                         <ul>
                             <li class="s2">
                                 <label th:for="boardFile">파일첨부</label> <br>
@@ -25,13 +26,16 @@
                             <li class="s2">
                                 <label th:for="boardTitle">제목</label>
                                 <input type="text" th:field="*{boardTitle}" placeholder="제목을 입력하세요">
+                                <p th:if="${#fields.hasErrors('boardTitle')}" th:errorclass="error" th:errors="*{boardTitle}"></p>
                             </li>
                             <li class="s2">
                                 <label th:for="boardContent">내용</label>
-                                <textarea name="boardContent" id="boardContent" cols="100" rows="30" style="overflow-y: auto;"></textarea>
                             </li>
+                            <textarea name="boardContent" id="boardContent" cols="100" rows="30" style="overflow-y: auto;"></textarea>
+                            <p th:if="${#fields.hasErrors('boardContent')}" th:errorclass="error"
+                               th:errors="*{boardContent}"></p>
                             <li class="s3">
-                                <input type="submit" value="게시글작성">
+                                <input type="submit" value="게시글작성" class="s3sub">
                             </li>
                         </ul>
                     </form>
