--- a/src/main/resources/templates/commentUpdate.html
+++ b/src/main/resources/templates/commentUpdate.html
@@ -14,8 +14,8 @@
     <div class="right-menu">
         <h1>게시글</h1>
         <div class="right-con">
-            <div class="boardUpdate">
-                <span>게시글내역</span>
+            <div class="boardDetail">
+                <h2>게시글내역</h2>
                 <form th:action="@{comment/commentUpdate}" method="post" th:object="${boardDto}">
                     <ul>
                         <li class="s2">
@@ -39,30 +39,32 @@
                             <span th:text="${board.boardCmcount}"></span>
                         <li class="s2">
                             <label th:for="boardContent">내용</label>
-                            <textarea th:text="${board.boardContent}" readonly></textarea>
+                            <textarea th:text="${board.boardContent}" cols="100" rows="30" style="overflow-y: auto;" readonly></textarea>
                         </li>
                         <li class="s3" th:if="${board.mEmail.equals(#authentication.getName())}">
-                            <a th:href="@{|/board/boardUpdate/${board.boardId}|}">게시글수정</a>
-                            <a th:href="@{|/board/boardDelete/${board.boardId}|}">게시글삭제</a>
+                            <a th:href="@{|/board/boardUpdate/${board.boardId}|}" class="s3sub">게시글수정</a>
+                            <a th:href="@{|/board/boardDelete/${board.boardId}|}" class="s3sub">게시글삭제</a>
+                        </li>
+                        <li class="s3">
                             <a th:href="@{/board/boardList}" class="s3sub">게시글조회</a>
                         </li>
                     </ul>
                 </form>
             </div>
             <div class="comment-update">
-                <span>리뷰수정</span>
+                <h3>댓글수정</h3>
                 <form th:action="@{/comment/commentUpdate}" method="POST">
                     <input type="hidden" readonly name="boardId" th:value="${board.boardId}">
+                    <input type="hidden" readonly name="commentId" th:value="${comment.commentId}">
                         <ul>
                             <li>
-                                <input type="hidden" readonly name="commentId" th:value="${comment.commentId}">
                                 <textarea th:value=${comment.commentContent}
-                                          style="line-height:20px; padding:10px; box-sizing: border-box;"
-                                          name="commentContent" id="commentContent" cols="30" rows="10"></textarea>
+                                style="line-height:20px; padding:10px; box-sizing: border-box; font-size: 14pt; font-weight: bold;" 
+                                name="commentContent" id="commentContent" cols="100" rows="3"></textarea>
                             </li>
-                            <li>
-                                <input type="submit" value="리뷰수정">
-                                <a th:href="@{/|/admin/boardDetail/${board.boardId}|}">전체목록</a>
+                            <li class="s3">
+                                <input type="submit" value="댓글수정" class="s3sub">
+                                <a th:href="@{|/board/boardDetail/${board.boardId}|}" class="s3sub">취소</a>
                             </li>
                         </ul>
                 </form>
