--- a/src/main/resources/static/css/board/BoardDetail.css
+++ b/src/main/resources/static/css/board/BoardDetail.css
@@ -1,6 +1,6 @@
-@import url(/css/common/reset.css);
-@import url(/css/common/adminHeader.css);
-@import url(/css/common/leftMenu.css);
+@import url(../common/reset.css);
+@import url(../common/adminHeader.css);
+@import url(../common/leftMenu.css);
 
 
 #wrap{
@@ -38,6 +38,13 @@
   display: block;
 }
 
+.right-menu .right-con .boardDetail{
+  
+  display: flex;
+  border: 1px solid #000000;
+  
+
+}
 
 .right-menu .right-con .boardDetail{
   width: 100%;
@@ -108,7 +115,15 @@
   font-size: 20px;
 }
 
-.right-menu .right-con .comment-update h3 {
+.right-menu .right-con .comment{
+  width: 100%;
+  display: block;
+  /* text-align: center; */
+  box-shadow: 5px 5px 5px 1px grey;
+  /* border: 1px solid; */
+}
+
+.right-menu .right-con .comment h3 {
   font-size: 25px;
   font-weight: bolder;
   color: white;
@@ -116,7 +131,51 @@
   padding: 5px;
 }
 
-.right-menu .right-con .comment-update ul{
+.right-menu .right-con .comment table{
+  text-align: center;
+  /* padding: 10px; */
+  margin: auto;
+  line-height: 190%;
+  border-bottom: 1px solid black;
+  border-collapse: collapse;
+
+}
+
+.right-menu .right-con .comment table thead th {
+    font-size: 14pt;
+    vertical-align: middle;
+    padding: 5px 22px;
+    background-color: black;
+    color: #FFFFFE;
+}
+
+.right-menu .right-con .comment table td {
+  padding: 6px 3px 6px;
+  /* border-bottom: 1px solid; */
+  border-top: 1px solid #000000;
+  text-align: center;
+  vertical-align: middle;
+  font-size: large;
+}
+
+.right-menu .right-con .comment table td a.button1{
+  flex: 0 0 100px;
+  text-align: center;
+  border: 0;
+  padding: 5px;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.right-menu .right-con .comment-write h3 {
+  font-size: 25px;
+  font-weight: bolder;
+  color: white;
+  background-color: #000000;
+  padding: 5px;
+}
+
+.right-menu .right-con .comment-write ul{
   padding: 5px 10px;
   box-sizing: border-box;
   /* display: flex; */
@@ -124,7 +183,7 @@
   /* gap: 5px; */
 }
 
-.right-menu .right-con .comment-update ul li.s3{
+.right-menu .right-con .comment-write ul li.s3{
   padding: 5px 10px;
   box-sizing: border-box;
   display: flex;
@@ -132,7 +191,7 @@
   gap: 5px;
 }
 
-.right-menu .right-con .comment-update ul li.s3 .s3sub{
+.right-menu .right-con .comment-write ul li.s3 .s3sub{
   flex: 0 0 250px;
   text-align: center;
   border: 0;
@@ -143,3 +202,4 @@
   transition: all 0.3s;
   font-size: 20px;
 }
+
