--- a/src/main/resources/static/css/board/BoardUpdate.css
+++ b/src/main/resources/static/css/board/BoardUpdate.css
@@ -1,6 +1,6 @@
-@import url(/css/common/reset.css);
-@import url(/css/common/adminHeader.css);
-@import url(/css/common/leftMenu.css);
+@import url(../common/reset.css);
+@import url(../common/adminHeader.css);
+@import url(../common/leftMenu.css);
 
 
 #wrap{
@@ -38,8 +38,14 @@
   display: block;
 }
 
+.error{
+  font-size: 12px;
+  color: red;
+  font-weight: bold;
+}
 
-.right-menu .right-con .boardDetail{
+
+.right-menu .right-con .boardUpdate{
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
@@ -47,7 +53,7 @@
   display: block;
 }
 
-.right-menu .right-con .boardDetail h2{
+.right-menu .right-con .boardUpdate h2{
   padding-left: 20px;
   font-size: 40px;
   font-weight: bolder;
@@ -55,24 +61,28 @@
   background-color: #000000;
 }
 
-.right-menu .right-con .boardDetail ul{
-  padding: 5px 10px;
-  box-sizing: border-box;
-  /* display: flex; */
-  /* justify-content: space-between; */
-  /* gap: 5px; */
+.right-menu .right-con .boardUpdate form {
+  padding: 20px;
 }
 
-.right-menu .right-con .boardDetail ul li.s2{
+.right-menu .right-con .boardUpdate ul{
+  display: flex;
+  flex-direction: column;
+  border: 0px solid #000000;
+  box-sizing: border-box;
+  gap: 10px;  
+}
+
+.right-menu .right-con .boardUpdate ul li.s2{
   padding: 5px 10px;
   box-sizing: border-box;
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   gap:5px;
 }
 
-.right-menu .right-con .boardDetail ul li.s2 label{
-  background-color: #000000;
+.right-menu .right-con .boardUpdate ul li.s2 label{
+  background-color: black;
   color: #ffffff;
   padding: 12px 20px;
   box-sizing: border-box;
@@ -80,51 +90,16 @@
   width: 150px;
 }
 
-.right-menu .right-con .boardDetail ul li.s2 span{
+.right-menu .right-con .boardUpdate ul li.s2 input{
 
   flex: 4;
   padding: 5px 10px;
   box-sizing: border-box;
   border: 1px solid #cccccc;
   line-height: 20px;
-
-}
-.right-menu .right-con .boardDetail ul li.s3{
-  padding: 5px 10px;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-}
-.right-menu .right-con .boardDetail ul li.s3 .s3sub{
-  flex: 0 0 250px;
-  text-align: center;
-  border: 0;
-  background-color: #000000;
-  color: #ffffff;
-  padding: 10px;
-  cursor: pointer;
-  transition: all 0.3s;
-  font-size: 20px;
 }
 
-.right-menu .right-con .comment-update h3 {
-  font-size: 25px;
-  font-weight: bolder;
-  color: white;
-  background-color: #000000;
-  padding: 5px;
-}
-
-.right-menu .right-con .comment-update ul{
-  padding: 5px 10px;
-  box-sizing: border-box;
-  /* display: flex; */
-  /* justify-content: space-between; */
-  /* gap: 5px; */
-}
-
-.right-menu .right-con .comment-update ul li.s3{
+.right-menu .right-con .boardUpdate ul li.s3 {
   padding: 5px 10px;
   box-sizing: border-box;
   display: flex;
@@ -132,7 +107,7 @@
   gap: 5px;
 }
 
-.right-menu .right-con .comment-update ul li.s3 .s3sub{
+.right-menu .right-con .boardUpdate ul li.s3 .s3sub{
   flex: 0 0 250px;
   text-align: center;
   border: 0;
