--- a/src/main/resources/static/css/notice/noticeDetail.css
+++ b/src/main/resources/static/css/notice/noticeDetail.css
@@ -1,6 +1,6 @@
-@import url(/css/common/reset.css);
-@import url(/css/common/adminHeader.css);
-@import url(/css/common/leftMenu.css);
+@import url(../common/reset.css);
+@import url(../common/adminHeader.css);
+@import url(../common/leftMenu.css);
 
 
 #wrap{
@@ -18,7 +18,7 @@
       height: auto;
       box-sizing: border-box;
       background-color: #ffffff;
-      border-top: 1px solid #000000;
+      /* border-top: 1px solid #000000; */
       /* border: 1px solid #ffff00; */
       padding: 30px;
       padding-left: 330px;
@@ -38,8 +38,7 @@
   display: block;
 }
 
-
-.right-menu .right-con .boardDetail{
+.right-menu .right-con .noticeDetail{
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
@@ -47,7 +46,7 @@
   display: block;
 }
 
-.right-menu .right-con .boardDetail h2{
+.right-menu .right-con .noticeDetail h2{
   padding-left: 20px;
   font-size: 40px;
   font-weight: bolder;
@@ -55,7 +54,7 @@
   background-color: #000000;
 }
 
-.right-menu .right-con .boardDetail ul{
+.right-menu .right-con .noticeDetail ul{
   padding: 5px 10px;
   box-sizing: border-box;
   /* display: flex; */
@@ -63,7 +62,7 @@
   /* gap: 5px; */
 }
 
-.right-menu .right-con .boardDetail ul li.s2{
+.right-menu .right-con .noticeDetail ul li.s2{
   padding: 5px 10px;
   box-sizing: border-box;
   display: flex;
@@ -71,7 +70,7 @@
   gap:5px;
 }
 
-.right-menu .right-con .boardDetail ul li.s2 label{
+.right-menu .right-con .noticeDetail ul li.s2 label{
   background-color: #000000;
   color: #ffffff;
   padding: 12px 20px;
@@ -80,7 +79,7 @@
   width: 150px;
 }
 
-.right-menu .right-con .boardDetail ul li.s2 span{
+.right-menu .right-con .noticeDetail ul li.s2 span{
 
   flex: 4;
   padding: 5px 10px;
@@ -89,14 +88,14 @@
   line-height: 20px;
 
 }
-.right-menu .right-con .boardDetail ul li.s3{
+.right-menu .right-con .noticeDetail ul li.s3{
   padding: 5px 10px;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   gap: 5px;
 }
-.right-menu .right-con .boardDetail ul li.s3 .s3sub{
+.right-menu .right-con .noticeDetail ul li.s3 .s3sub{
   flex: 0 0 250px;
   text-align: center;
   border: 0;
@@ -108,38 +107,3 @@
   font-size: 20px;
 }
 
-.right-menu .right-con .comment-update h3 {
-  font-size: 25px;
-  font-weight: bolder;
-  color: white;
-  background-color: #000000;
-  padding: 5px;
-}
-
-.right-menu .right-con .comment-update ul{
-  padding: 5px 10px;
-  box-sizing: border-box;
-  /* display: flex; */
-  /* justify-content: space-between; */
-  /* gap: 5px; */
-}
-
-.right-menu .right-con .comment-update ul li.s3{
-  padding: 5px 10px;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-}
-
-.right-menu .right-con .comment-update ul li.s3 .s3sub{
-  flex: 0 0 250px;
-  text-align: center;
-  border: 0;
-  background-color: #000000;
-  color: #ffffff;
-  padding: 10px;
-  cursor: pointer;
-  transition: all 0.3s;
-  font-size: 20px;
-}
