--- a/src/main/resources/static/css/notice/noticePage.css
+++ b/src/main/resources/static/css/notice/noticePage.css
@@ -36,21 +36,60 @@
   /* border: 1px solid purple; */
   height: 800px;
   padding: 100px 100px;
-  display: block;
+  display: flex;
 }
 
 .right-menu .right-con .noticePage{
-  width: 1000px;
+  width: 100%;
   display: block;
   text-align: center;
-  border: 1px solid;
+  /* border: 1px solid; */
+  box-shadow: 5px 5px 5px 1px grey;
 }
 
-.right-menu .right-con .noticePage .span {
-  font-size: 50px;
+.right-menu .right-con .noticePage h2 {
+  padding-left: 20px;
+  font-size: 40px;
   font-weight: bolder;
   color: white;
   background-color: #000000;
-  /* width: 100px; */
-  /* display: inline; */
+}
+
+.right-menu .right-con .noticePage table{
+  text-align: center;
+  /* padding: 10px; */
+  margin: auto;
+  line-height: 190%;
+  border-bottom: 1px solid black;
+  border-collapse: collapse;
+}
+
+.right-menu .right-con .noticePage table thead th {
+    font-size: 14pt;
+    vertical-align: middle;
+    padding: 5px 22px;
+    background-color: black;
+    color: #FFFFFE;
+}
+
+/* .right-menu .right-con .noticePage table th, td{
+  border-bottom: 1px solid #000000 ;
+} */
+
+.right-menu .right-con .noticePage table td {
+  padding: 6px 3px 6px;
+  /* border-bottom: 1px solid; */
+  border-top: 1px solid #000000;
+  text-align: center;
+  vertical-align: middle;
+  font-size: large;
+}
+
+.right-menu .right-con .noticePage .search .button1 {
+  flex: 0 0 100px;
+  text-align: center;
+  border: 0;
+  padding: 1.3px;
+  background-color: #000000;
+  color: #ffffff;
 }
