--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" , xmlns:sec="http://www.thymeleaf.org/extras/spring-security5">
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
 
 <head>
     <meta charset="UTF-8">
     <title>footballAdmin</title>
-    <link rel="stylesheet" th:href="@{/css/board/adminBoardDetail.css}">
+    <link rel="stylesheet" th:href="@{/css/notice/noticeDetail.css}">
 </head>
 
 <body>
@@ -15,15 +14,9 @@
     <div class="right-menu">
         <h1>게시글</h1>
         <div class="right-con">
-            <div class="boardUpdate">
-                <span>공지사항내역</span>
-                <form th:action="@{admin/boardUpdate}" method="post" th:object="${boardDto}">
+            <div class="noticeDetail">
+                <h2>공지사항내역</h2>
                     <ul>
-                        <li class="s2">
-                            <div class="s4" th:unless="${board.boardAttach==1}">
-                                <span>없음</span>
-                            </div>
-                        </li>
                         <li class="s2">
                             <label th:for="noticeTitle">제목</label>
                             <span th:text="${notice.noticeTitle}"></span>
@@ -34,15 +27,17 @@
                         </li>
                         <li class="s2">
                             <label th:for="noticeContent">내용</label>
-                            <textarea th:text="${notice.noticeContent}" readonly></textarea>
                         </li>
+                        <textarea th:text="${notice.noticeContent}" cols="100" rows="30" style="overflow-y: auto; font-size: large; font-weight: 300;"  readonly></textarea>
+
                         <li class="s3" th:if="${notice.mEmail.equals(#authentication.getName())}">
-                            <a th:href="@{|/notice/noticeUpdate/${notice.noticeId}|}">게시글수정</a>
-                            <a th:href="@{|/notice/noticeDelete/${notice.noticeId}|}">게시글삭제</a>
-                            <a th:href="@{/notice/noticeList}" class="s3sub">게시글조회</a>
+                            <a th:href="@{|/notice/noticeUpdate/${notice.noticeId}|}" class="s3sub">공지사항수정</a>
+                            <a th:href="@{|/notice/noticeDelete/${notice.noticeId}|}" class="s3sub">공지사항삭제</a>
+                        </li>
+                        <li class="s3">
+                            <a th:href="@{/notice/noticePage}" class="s3sub">공지사항조회</a>
                         </li>
                     </ul>
-                </form>
             </div>
         </div>
     </div>
